--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -24,7 +24,7 @@ jobs:
       run: poetry --version
     - name: Install dependencies
       run: |
-        python -m poetry install
+        python -m poetry install --with test
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
