Standardise formatting of pyproject
Standardise formatting of pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,28 +6,28 @@ build-backend = "setuptools.build_meta"
 name = "dstaf"
 version = "0.0.1"
 authors = [
-  { name="Dasha Sierra", email="pypi@dashasierra.com" },
+    {name="Dasha Sierra", email="pypi@dashasierra.com"},
 ]
 description = "Dasha Sierra Text Application Framework"
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
-        'Development Status :: 2 - Pre-Alpha',
-        'Environment :: Console',
-        'Intended Audience :: Developers',
-        'Topic :: Text Processing :: General',
-        'License :: OSI Approved :: Apache Software License',
-        'Operating System :: OS Independent',
-        'Programming Language :: Python',
-        'Programming Language :: Python :: 3.9',
-        'Programming Language :: Python :: 3.10',
-        'Programming Language :: Python :: 3.11',
-        'Programming Language :: Python :: 3.12',
-        'Programming Language :: Python :: 3.13',
-        'Programming Language :: Python :: Implementation :: CPython',
-        'Topic :: Software Development :: User Interfaces',
-        'Topic :: Terminals',
-    ]
+    'Development Status :: 2 - Pre-Alpha',
+    'Environment :: Console',
+    'Intended Audience :: Developers',
+    'Topic :: Text Processing :: General',
+    'License :: OSI Approved :: MIT',
+    'Operating System :: OS Independent',
+    'Programming Language :: Python',
+    'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.10',
+    'Programming Language :: Python :: 3.11',
+    'Programming Language :: Python :: 3.12',
+    'Programming Language :: Python :: 3.13',
+    'Programming Language :: Python :: Implementation :: CPython',
+    'Topic :: Software Development :: User Interfaces',
+    'Topic :: Terminals',
+]
 license = "MIT"
 license-files = ["LICENSE"]
 
