--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ version_variable = [
     "dstaf/__init__.py:__version__",
     "pyproject.toml:version"
 ]
+tag_format = "{version}"
 branch = "master"
 upload_to_pypi = false
 upload_to_release = true
