--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,12 +37,20 @@ jobs:
       - name: Bump Version
         id: bump_version
         run: |
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$CURRENT_VERSION"
+          CURRENT_VERSION=$(grep '^version =' pyproject.toml | awk -F'=' '{print $2}' | tr -d ' "')
+          CURRENT_VERSION=$(echo "$CURRENT_VERSION" | tr -d '\r\n')  # Cleans up unexpected characters
+          
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$(echo $CURRENT_VERSION)"
+          MAJOR=${MAJOR:-0}
+          MINOR=${MINOR:-0}
+          PATCH=${PATCH:-0}
+          
           case "$BUMP" in
             major) ((MAJOR++)); MINOR=0; PATCH=0 ;;
             minor) ((MINOR++)); PATCH=0 ;;
             patch) ((PATCH++)) ;;
           esac
+          
           NEW_VERSION="$MAJOR.$MINOR.$PATCH"
           echo "NEW_VERSION=$NEW_VERSION" >> $GITHUB_ENV
 
