--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,8 +51,7 @@ jobs:
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        NEW_TAG: ${{ steps.dry-bump-tag.outputs.new_tag }}
       with:
-        tag_name: "${NEW_TAG}"
-        release_name: "Release ${NEW_TAG}"
+        tag_name: "${{ steps.dry-bump-tag.outputs.new_tag }}"
+        release_name: "Release ${{ steps.dry-bump-tag.outputs.new_tag }}"
         body: ${{ steps.create-release-notes.outputs.release-notes }}
