--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
         NEW_TAG: ${{ steps.dry-bump-tag.outputs.new_tag }}
       run: |
         git config user.name "GitHub Actions Bot"
+        git config user.email "gh_actions@dashasierra.com"
         sed -i "s/^version = .*/version = \"${NEW_TAG}\"/" pyproject.toml
         sed -i "s/^__version__ = .*/__version__ = \"${NEW_TAG}\"/" dstaf/__init__.py
         git add pyproject.toml dstaf/__init__.py
@@ -52,6 +53,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: "${{ steps.dry-bump-tag.outputs.new_tag }}"
+        tag_name: ${{ steps.dry-bump-tag.outputs.new_tag }}
         release_name: "Release ${{ steps.dry-bump-tag.outputs.new_tag }}"
         body: ${{ steps.create-release-notes.outputs.release-notes }}
