--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,19 @@ jobs:
     - name: Checkout for Release
       uses: actions/checkout@v4
 
+    - name: Extract major version
+      id: major-version
+      run: echo "major=v$(echo ${{ steps.dry-bump-tag.outputs.new_tag }} | cut -d. -f1)" >> $GITHUB_ENV
+
+    - name: Create or update major version tag
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git tag -f "$major"
+        git push -f origin "$major"
+        git tag -f ${{ steps.dry-bump-tag.outputs.new_tag }}
+        git push -f origin ${{ steps.dry-bump-tag.outputs.new_tag }}
+
     - name: Create Release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -59,17 +72,3 @@ jobs:
           --repo="${{ github.repository }}" \
           --title="Release ${{ steps.dry-bump-tag.outputs.new_tag }}" \
           --generate-notes
-
-    - name: Extract major version
-      id: major-version
-      run: echo "major=v$(echo ${{ steps.dry-bump-tag.outputs.new_tag }} | cut -d. -f1)" >> $GITHUB_ENV
-
-    - name: Checkout for Major Tag
-      uses: actions/checkout@v4
-
-    - name: Create or update major version tag
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        git tag -f "$major"
-        git push -f origin "$major"
