--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,11 +64,9 @@ jobs:
           --title="Release ${{ steps.dry-bump-tag.outputs.new_tag }}" \
           --generate-notes
 
-    - name: Create or update tags
+    - name: Create or update major tag
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        git tag -f ${{ steps.dry-bump-tag.outputs.new_tag }}
-        git push -f origin v${{ steps.dry-bump-tag.outputs.new_tag }}
         git tag -f "$major"
         git push -f origin "$major"
