--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,11 +51,24 @@ jobs:
     - name: Checkout for Release
       uses: actions/checkout@v4
 
+    - name: Extract major version
+      id: major-version
+      run: echo "major=v$(echo ${{ steps.dry-bump-tag.outputs.new_tag }} | cut -d. -f1)" >> $GITHUB_ENV
+
+    - name: Create or update tags
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        git tag -f "$major"
+        git push -f origin "$major"
+        git tag -f ${{ steps.dry-bump-tag.outputs.new_tag }}
+        git push -f origin ${{ steps.dry-bump-tag.outputs.new_tag }}
+
     - name: Create Release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         gh release create "${{ steps.dry-bump-tag.outputs.new_tag }}" \
           --repo="${{ github.repository }}" \
-          --title="DS-TAF ${{ steps.dry-bump-tag.outputs.new_tag }}" \
+          --title="Release ${{ steps.dry-bump-tag.outputs.new_tag }}" \
           --generate-notes
