--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,9 +55,9 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        git tag -f "$major"
+        git tag -s "$major"
         git push -f origin "$major"
-        git tag -f ${{ steps.bump-tag.outputs.new_tag }}
+        git tag -s ${{ steps.bump-tag.outputs.new_tag }}
         git push -f origin ${{ steps.bump-tag.outputs.new_tag }}
 
     - name: Checkout for Release
@@ -69,7 +69,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
         gh release create "${{ steps.bump-tag.outputs.new_tag }}" \
           --repo="${{ github.repository }}" \
           --title="DStaf ${{ steps.bump-tag.outputs.new_tag }}" \
