--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -34,7 +34,7 @@ jobs:
       env:
         NEW_TAG: ${{ steps.bump-tag.outputs.new_tag }}
       run: |
-        git config user.name "GitHub Actions Bot"
+        git config user.name "GitHub Actions[Bot]"
         git config user.email "gh_actions@dashasierra.com"
         sed -i "s/^version = .*/version = \"${NEW_TAG}\"/" pyproject.toml
         sed -i "s/^__version__ = .*/__version__ = \"${NEW_TAG}\"/" dstaf/__init__.py
