--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -49,7 +49,9 @@ jobs:
 
     - name: Extract major version
       id: major-version
-      run: echo "major=v$(echo ${{ steps.bump-tag.outputs.new_tag }} | cut -d. -f1)" >> $GITHUB_ENV
+      run: |
+        echo "major=v$(echo ${{ steps.bump-tag.outputs.new_tag }} | cut -d. -f1)" >> $GITHUB_ENV
+        echo "minor=v$(echo ${{ steps.bump-tag.outputs.new_tag }} | cut -d. -f1,2)" >> $GITHUB_ENV
 
     - name: Create or update tags
       env:
@@ -57,6 +59,8 @@ jobs:
       run: |
         git tag -f "$major"
         git push -f origin "$major"
+        git tag -f "$minor"
+        git push -f origin "$minor"
 
     - name: Checkout for Release
       uses: actions/checkout@v4
