--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -83,7 +83,7 @@ jobs:
   check-title:
     name: Version Check
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request' && github.ref == 'refs/heads/master'
+    if: github.event_name == 'pull_request'
     steps:
       - name: Validate Pull Request Title
         env:
