--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -80,7 +80,7 @@ jobs:
 
   check-title:
     name: Version Check
-    runs-on: linux
+    runs-on: ubuntu-latest
     if: github.event_name != 'push'
     steps:
       - name: Validate Pull Request Title
