--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -25,7 +25,7 @@ jobs:
       id: bump-tag
       uses: anothrNick/github-tag-action@1.73.0
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.DSS_TOKEN }}
         WITH_V: false
         DRY_RUN: true
         DEFAULT_BUMP: patch
