--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -10,6 +10,20 @@ on:
 
 jobs:
 
+  check-title:
+    name: Check PR for Version Tag
+    runs-on: ubuntu-latest
+    if: github.event_name != 'push'
+    steps:
+      - name: Validate Pull Request Title
+        env:
+          PR_TITLE: ${{ github.event.pull_request.title }}
+        run: |
+          if [[ ! "$PR_TITLE" =~ ^#(major|minor|patch|none) ]]; then
+            echo "Error: Pull request title must start with #major, #minor, #patch, or #none."
+            exit 1
+          fi
+
   release:
     name: Create New Release
     runs-on: ubuntu-latest
@@ -77,17 +91,3 @@ jobs:
           --repo="${{ github.repository }}" \
           --title="DStaf ${{ steps.bump-tag.outputs.new_tag }}" \
           --generate-notes
-
-  check-title:
-    name: Version Check
-    runs-on: ubuntu-latest
-    if: github.event_name != 'push'
-    steps:
-      - name: Validate Pull Request Title
-        env:
-          PR_TITLE: ${{ github.event.pull_request.title }}
-        run: |
-          if [[ ! "$PR_TITLE" =~ ^#(major|minor|patch|none) ]]; then
-            echo "Error: Pull request title must start with #major, #minor, #patch, or #none."
-            exit 1
-          fi
