Remove refs heads master
Remove refs heads master

--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+    if: github.event_name == 'push'
 
     steps:
     - name: Checkout
