--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -13,7 +13,7 @@ jobs:
   check-title:
     name: Check PR for Version Tag
     runs-on: ubuntu-latest
-    if: github.event_name != 'push' && github.ref == 'refs/heads/master'
+    if: github.event_name != 'push'
     steps:
       - name: Validate Pull Request Title
         env:
@@ -49,7 +49,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    if: github.event_name == 'push'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
 
     steps:
     - name: Checkout
