--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           if [[ ! "$PR_TITLE" =~ ^(?i)(major|minor|patch|none) ]]; then
             echo "Error: Pull request title must start with 'Major', 'Minor', 'Patch', or 'None'."
+            echo "     - '$PR_TITLE'"
             exit 1
           fi
 
