--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -74,7 +74,7 @@ jobs:
         NEW_TAG: ${{ steps.bump-tag.outputs.new_tag }}
         GITHUB_TOKEN: ${{ secrets.DSS_TOKEN }}
       run: |
-        git config user.name "Dasha Sierra"
+        git config user.name "dashasierra"
         git config user.email "gh_actions@dashasierra.com"
         sed -i "s/^version = .*/version = \"${NEW_TAG}\"/" pyproject.toml
         sed -i "s/^__version__ = .*/__version__ = \"${NEW_TAG}\"/" dstaf/__init__.py
