--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -69,13 +69,19 @@ jobs:
         PATCH_STRING_TOKEN: Patch
         NONE_STRING_TOKEN: None
 
+    - name: Configure SSH
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.DEPLOY_PK }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+
     - name: Update Version Strings
       env:
         NEW_TAG: ${{ steps.bump-tag.outputs.new_tag }}
-        GITHUB_TOKEN: ${{ secrets.DSS_TOKEN }}
       run: |
-        git config user.name "dashasierra"
-        git config user.email "gh_actions@dashasierra.com"
+        git config user.name "GitHub Actions"
+        git config user.email "actions@github.com"
         sed -i "s/^version = .*/version = \"${NEW_TAG}\"/" pyproject.toml
         sed -i "s/^__version__ = .*/__version__ = \"${NEW_TAG}\"/" dstaf/__init__.py
         git add pyproject.toml dstaf/__init__.py
