--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -83,11 +83,12 @@ jobs:
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
         git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/dashasierra/dstaf.git
+        git checkout -b auto-version-update
         sed -i "s/^version = .*/version = \"${NEW_TAG}\"/" pyproject.toml
         sed -i "s/^__version__ = .*/__version__ = \"${NEW_TAG}\"/" dstaf/__init__.py
         git add pyproject.toml dstaf/__init__.py
         git commit -m "Bump Version to ${NEW_TAG}"
-        git push origin master
+        git push origin auto-version-update
 
     - name: Checkout for Tag
       uses: actions/checkout@v4
