--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -91,14 +91,23 @@ jobs:
         git push origin auto-version-update
 
     - name: Create a pull request
+      env:
+        GH_TOKEN: ${{ secrets.PAT_TOKEN }}
       run: |
         gh pr create --title "Auto Version Bump to ${NEW_TAG}" \
                      --body "Automated version update triggered by GitHub Actions" \
                      --base master --head auto-version-update
-        gh pr review --approve --repo dashasierra/dstaf
-        gh pr merge --merge --repo dashasierra/dstaf
+    - name: Review the pull request
       env:
         GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+      run: |
+        gh pr review --approve --repo dashasierra/dstaf
+
+    - name: Merge the pull request
+      env:
+        GH_TOKEN: ${{ secrets.PAT_TOKEN }}
+      run: |
+        gh pr merge --merge --repo dashasierra/dstaf
 
     - name: Checkout for Tag
       uses: actions/checkout@v4
