--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -97,18 +97,20 @@ jobs:
         gh pr create --title "Auto Version Bump to ${NEW_TAG}" \
                      --body "Automated version update triggered by GitHub Actions" \
                      --base master --head auto-version-update
+        PR_NUMBER=$(gh pr list --state open --base master --head auto-version-update --json number --jq '.[0].number')
+        echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
 
-    - name: Review the pull request
+    - name: Approve the pull request
       env:
         GH_TOKEN: ${{ secrets.PAT_TOKEN }}
       run: |
-        gh pr review --approve --repo dashasierra/dstaf/auto-version-update
+        gh pr review $PR_NUMBER --approve
 
     - name: Merge the pull request
       env:
         GH_TOKEN: ${{ secrets.PAT_TOKEN }}
       run: |
-        gh pr merge --merge --repo dashasierra/dstaf/auto-version-update
+        gh pr merge $PR_NUMBER --merge
 
     - name: Checkout for Tag
       uses: actions/checkout@v4
