--- a/.github/workflows/Version.yml
+++ b/.github/workflows/Version.yml
@@ -77,18 +77,22 @@ jobs:
         ssh-keyscan github.com >> ~/.ssh/known_hosts
 
     - name: Update Version Strings
+      id:
+        Create_Branch
       env:
         NEW_TAG: ${{ steps.bump-tag.outputs.new_tag }}
       run: |
+        BRANCH_NAME="vupdate-$(uuidgen)"
+        echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
         git remote set-url origin https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/dashasierra/dstaf.git
-        git checkout -b auto-version-update
+        git checkout -b ${{ env.BRANCH_NAME }}
         sed -i "s/^version = .*/version = \"${NEW_TAG}\"/" pyproject.toml
         sed -i "s/^__version__ = .*/__version__ = \"${NEW_TAG}\"/" dstaf/__init__.py
         git add pyproject.toml dstaf/__init__.py
         git commit -m "Bump Version to ${NEW_TAG}"
-        git push origin auto-version-update
+        git push origin ${{ env.BRANCH_NAME }}
 
     - name: Create a pull request
       id: pr_number
@@ -97,8 +101,8 @@ jobs:
       run: |
         gh pr create --title "Auto Version Bump to ${NEW_TAG}" \
                      --body "Automated version update triggered by GitHub Actions" \
-                     --base master --head auto-version-update
-        PR_NUMBER=$(gh pr list --state open --base master --head auto-version-update --json number --jq '.[0].number')
+                     --base master --head ${{ env.BRANCH_NAME }}
+        PR_NUMBER=$(gh pr list --state open --base master --head ${{ env.BRANCH_NAME }} --json number --jq '.[0].number')
         echo "PR_NUMBER=$PR_NUMBER" >> $GITHUB_ENV
 
     - name: Merge the pull request
